--- a/gb/23/11/10/n14114027.md
+++ b/gb/23/11/10/n14114027.md
@@ -1,14 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>大陆医院贩卖出生证 涉及拐卖人口罪恶</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2009/04/904152201291673-600x400.jpg" />
 <h6>图为广东东莞部分寻子家长，拉着“悬赏1000万买回爱子”的标语走上街头。（大纪元）
 </h6>
 <hr>
-	<p>【大纪元2023年11月11日讯】（大纪元特约记者熊斌、王若曦采访报导）近日，大陆医院倒卖<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%87%BA%E7%94%9F%E8%AF%81.md#1">出生证</a>案持续发酵。多家医院被曝<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%94%AE%E5%8D%96%E5%A9%B4%E5%84%BF.md#1">售卖婴儿</a>，为买来的孩子<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B4%97%E7%99%BD%E8%BA%AB.md#1">洗白身</a>分，形成一个利益链条。分析认为，这导致<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8B%90%E5%8D%96%E4%BA%BA%E5%8F%A3.md#1">拐卖人口</a>的犯罪永远不会消失。</p>
-<p>11月6日，大陆打拐人士上官正义发微博披露，他经过长达一年多卧底，掌握到湖北襄阳健桥医院院长，勾结多地网络中介，利用抖音平台长期公开以近10万元价格贩卖<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%87%BA%E7%94%9F%E8%AF%81.md#1">出生证</a>、疫苗本为买来的孩子<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B4%97%E7%99%BD%E8%BA%AB.md#1">洗白身</a>分。该团伙还<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%94%AE%E5%8D%96%E5%A9%B4%E5%84%BF.md#1">售卖婴儿</a>，男女婴价格都在10万元以上，涉及全国十多个省。</p>
-<figure id="attachment_14114030" aria-describedby="caption-attachment-14114030" style="width: 518px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/11/id14114030-Screen-Shot-2023-11-10-at-12.55.25-PM.png"><img class=" wp-image-14114030" src="https://i.epochtimes.com/assets/uploads/2023/11/id14114030-Screen-Shot-2023-11-10-at-12.55.25-PM-600x531.png" alt="" width="518" b="458" /></a><figcaption id="caption-attachment-14114030" class="wp-caption-text">打拐人士披露湖北襄阳健桥医院贩卖出生证、售卖婴儿。（网路截图）</figcaption></figure>
+	<p>【大纪元2023年11月11日讯】（大纪元特约记者熊斌、王若曦采访报导）近日，大陆医院倒卖出生证案持续发酵。多家医院被曝售卖婴儿，为买来的孩子洗白身份，形成一个利益链条。分析认为，这导致拐卖人口的犯罪永远不会消失。</p>
+<p>11月6日，大陆打拐人士上官正义发微博披露，他经过长达一年多卧底，掌握到湖北襄阳健桥医院院长，勾结多地网络中介，利用抖音平台长期公开以近10万元价格贩卖出生证、疫苗本为买来的孩子洗白身份。该团伙还售卖婴儿，男女婴价格都在10万元以上，涉及全国十多个省。<br />
+<a style="width: 100%; max-width: 660px; overflow: hidden; border-radius: 10px;" src="https://embed.podcasts.apple.com/us/podcast/%E5%A4%A7%E9%99%B8%E9%86%AB%E9%99%A2%E8%B2%A9%E8%B3%A3%E5%87%BA%E7%94%9F%E8%AD%89-%E6%B6%89%E5%8F%8A%E6%8B%90%E8%B3%A3%E4%BA%BA%E5%8F%A3%E7%BD%AA%E6%83%A1/id1519616594?i=1000634706896" width="300" b="175" frameborder="0" sandbox="allow-forms allow-popups allow-same-origin allow-as allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"></a><br />
+<strong>（听更多请至<ahref="https://github.com/1992513/djy/blob/master/gb/podcast.md#1">“听纪元”</a>平台）</strong></p>
+<figure id="attachment_14114030" aria-describedby="caption-attachment-14114030" style="width: 518px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/11/id14114030-Screen-Shot-2023-11-10-at-12.55.25-PM.png"><img decoding="async" class=" wp-image-14114030" src="https://i.epochtimes.com/assets/uploads/2023/11/id14114030-Screen-Shot-2023-11-10-at-12.55.25-PM-600x531.png" alt="" width="518" b="458" /></a><figcaption id="caption-attachment-14114030" class="wp-caption-text">打拐人士披露湖北襄阳健桥医院贩卖出生证、售卖婴儿。（网路截图）</figcaption></figure>
 <p>据陆媒追踪报导，健桥医院的前身是102医院，即湖北工业建筑总公司的职工医院。院长叶某在此工作二十多年后，2010年曾因非法鉴定胎儿性别、非法实施引产手术被判拘役5个月。</p>
 <p>职工医院改制成民营医院后，叶某成为院长，医院大股东，占股80%。该院靠着强大的市场团队，通过“密网”获取孕妇信息，成为襄阳市出生婴儿数排名第三的医院。</p>
 <p>在暗访镜头前，院长叶某一边说“我们犯的是死罪”、“风险是极大的”，一边亲自下场推销、制作假的出生证明。从入院记录到各项检查、生产记录、防疫证以及系统联网的各项文件等都能给人贩子配齐。</p>
@@ -36,35 +38,33 @@
 <p>责任编辑：孙芸#</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/10/n14113751.md#1">贵阳商场电梯故障 工人维修被离奇卷入夹死</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/9/n14113203.md#1">陕西月子会所护工心情差 将婴儿打成脑出血</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/10/n14113470.md#1">深圳闹市男子持刀砍人 传有小孩遭割喉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/9/n14113357.md#1">53岁宣萱分享：不整容靠简单一招瘦脸</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390957.md#1">厦门大学女生遭霸凌受重伤 学生拟游行维权</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/8/n14387027.md#1">停课、隔离 大陆多地学校集体爆发水痘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390884.md#1">重庆夫妻吵架时往窗外扔刀 外卖员被砸伤住院</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390845.md#1">南京大屠杀纪念日 中国逾半日本人学校停课</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/31/n10821837.md#1" target="_blank">林辉：文革偷听“敌台”让一些中国人觉醒</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/5/13/n7891043.md#1" target="_blank">永恒的感恩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/18/n11052730.md#1" target="_blank">王友群：按邓小平的说法 中共早该下台了</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/20/n11466682.md#1" target="_blank">患脑瘤等死 中共总参工程师炼法轮功后痊愈</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/3/n14109270.md#1">专家：《蒋中正日记》是罕见国家领导人日记</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/6/n14110798.md#1">一年养生就从立冬起 补肾养藏精气</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/3/n14109344.md#1">六岁时的乔治?华盛顿没有砍樱桃树吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/6/n14110441.md#1">【未解之谜】全中！预言中国国运的马前课（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102372.md#1">【古道人生】富翁为何招来“杀妻之罪”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/9/n14112929.md#1">【环球直击】共和党第三场辩论 聚焦中共及以哈冲突</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/10/n14113364.md#1">【菁英论坛】中共金融会议 房市判死刑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/10/n14113713.md#1">【全球新闻】中山二院现集体患癌 促癌研究水太深</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112239.md#1">网传李克强女儿照：葬礼上拒与中共高官对视握手</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112357.md#1">范畴生前撰文：李克强之死是“阳谋”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112156.md#1">习亲自要求过紧日子 专家：问题异常严重</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/7/n14111721.md#1">好莱坞女星裘莉批以色列 遭影帝父亲乔恩反驳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112331.md#1">49岁八点档台剧女星兵家绮罹癌 预计下月手术</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112406.md#1">当年为何缺席林心如婚礼？苏有朋曝原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14111772.md#1">梁朝伟夸刘嘉玲全能 曝当年婚礼由妻一手包办</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112462.md#1">郑欣宜正式复出幕前 圆润体态现身好友MV</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/31/n14107124.md#1">亚马逊美容护肤品大促销 优惠精选</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/7/n14111344.md#1">如何从睡姿看个性？ 专家教你几招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105395.md#1">五味子降压护肝抗衰老 服用有禁忌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112405.md#1">铁锅料理更健康美味 4步让铁锅变不沾锅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112122.md#1">闹钟响了按下贪睡按钮 可能对身体有害</a></li>
-<hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/11/10/n14114027.htm">大陆医院贩卖出生证 涉及拐卖人口罪恶</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/11/10/n14114027.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386541.md#1">格鲁吉亚发现神秘石板 或蕴含失落语言</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387166.md#1">美国护士称见到2米高的死神逼近临终病人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387684.md#1">【未解之谜】孙中山转世？河南奇人张四目之谜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/13/n13642953.md#1">叹武训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14387867.md#1">如何把坏事变好事？谈随遇而安</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390700.md#1">【唐青看时事】川普摆鸿门宴 北京左右为难</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14390085.md#1">【财经非常道】中共查英伟达 美中芯片战再升级</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390703.md#1">【新闻大破解】世界大战碎片化？叙闪崩拖垮谁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389628.md#1">海关署长俞建华猝死 其靠山被指是丁薛祥</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389267.md#1">传中共拟允许人民币大幅贬值 专家析利弊</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389618.md#1">【内幕】惧美国制裁 中共跨国镇压密令曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389389.md#1">高圆圆素颜带娃外出骑车 一细节获赞温馨有爱</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389328.md#1">孙俪自曝13岁儿子用身体帮她挡车 网友大赞</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14390069.md#1">贾静雯素颜冻龄惊艳 海关人员查看护照惊呆</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14390043.md#1">开跑车随手丢烟头 《庆余年》主演张若昀惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390760.md#1">睽违9年再接古装剧 胡歌有望饰演镖客一角?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389057.md#1">用荷兰锅煮饭 停电也不担心 一锅到底营养更全面</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389513.md#1">开卷真的有益 擅长阅读者大脑结构不同</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389408.md#1">为什么不该用微波炉泡茶？ 泡好茶三技巧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390642.md#1">用手机拍微距—摄影家廖翠环的创作之路</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390257.md#1">在冬天真的比较容易罹患感冒吗？ 专家释疑</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/11/10/n14114027.htm">大陆医院贩卖出生证 涉及拐卖人口罪恶</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/11/10/n14114027.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
